# BharatLedger-AI

./: .env.example  .gitignore  Makefile  PROJECT_OVERVIEW.md  README.md  START_HERE.md  diagnose_invoice.py  docker-compose.yml  package-lock.json  package.json  start.bat  start.py
.github/workflows/: ci.yml
ai_engine/: __init__.py  pyproject.toml  requirements.txt
ai_engine/ai_engine/: __init__.py  category_mappings.py  gst_calculator.py  gst_rates.py  invoice_processor.py  llm_extractor.py  ocr_service.py  types.py
ai_engine/samples/: .gitkeep
ai_engine/tests/: __init__.py  test_category_mappings.py  test_gst_calculator.py  test_invoice_processor.py
backend/: Dockerfile  alembic.ini  requirements.txt  test_invoice_backend.py
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py  002_invoice_correction_and_indexes.py
backend/app/: __init__.py  main.py
backend/app/api/: deps.py
backend/app/core/: __init__.py  config.py  security.py
backend/app/db/: session.py
backend/app/schemas/: business.py  invoice.py  user.py
backend/app/services/: gst_intelligence.py  gst_utils.py  storage.py  (+1 more)
backend/tests/: conftest.py  test_api_auth.py  test_gst_intelligence.py  test_reports.py
docs/: API.md  DEPLOYMENT.md  EINVOICE_SANDBOX.md  FRONTEND_CODE_REVIEW.md  GST_RULES.md  ICON_RECOMMENDATIONS.md  IMPLEMENTATION_ROADMAP.md  OCR_SETUP.md  SETUP.md
frontend/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js
frontend/src/: App.tsx  index.css  main.tsx
(+35 files in other folders)
